--- a/webapp/index.html
+++ b/webapp/index.html
@@ -13,17 +13,26 @@
 
 <body>
   <nav id="menuNav">
-    <button id="menuButton">
-      <img src="res/icons/menu.svg" alt="Menu" />
-    </button>
-    <!-- <div id="options">
-      <ul>
-        <li>About</li>
-        <li>Cases</li>
-        <li>Memoirs</li>
-        <li>Contact</li>
+    <div id="menuToggle">
+      <input type="checkbox" />
+      <span></span>
+      <span></span>
+      <span></span>
+      <ul id="menu">
+        <a href="#">
+          <li>About</li>
+        </a>
+        <a href="#">
+          <li>Cases</li>
+        </a>
+        <a href="#">
+          <li>Memoirs</li>
+        </a>
+        <a href="#">
+          <li>Contact</li>
+        </a>
       </ul>
-    </div> -->
+    </div>
     <div id="language">
       <span>English</span>
       <span>
