feat: change html layout to fit into sections

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -38,16 +38,21 @@
     </div>
   </nav>
   <main>
-    <img id="profilePicture1" src="res/images/profile1.png" alt="Profile picture">
-    <div id="nameAndRole">
-      <span id="name">TACIO COSTA</span>
-      <span id="role">Software Engineer</span>
-    </div>
-    <button id="meetMe">MEET ME</button>
-    <div id="quote">
-      <span id="quoteText">"Stay hungry. Stay foolish."</span>
-      <span id="quoteAuthor">Steve Jobs</span>
-    </div>
+    <section id="firstImpressionSection">
+      <img id="profilePicture1" src="res/images/profile1.png" alt="Profile picture">
+      <div id="nameAndRole">
+        <span id="name">TACIO COSTA</span>
+        <span id="role">Software Engineer</span>
+      </div>
+      <button id="meetMe">MEET ME</button>
+      <div id="quote">
+        <span id="quoteText">"Stay hungry. Stay foolish."</span>
+        <span id="quoteAuthor">Steve Jobs</span>
+      </div>
+    </section>
+    <section id="aboutSection">
+      <h1>About</h1>
+    </section>
   </main>
 </body>
 
