refactor: extract firstimpression scss module

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -53,6 +53,15 @@
     <section id="aboutSection">
       <h1>About</h1>
     </section>
+    <section id="casesSection">
+      <h1>Cases</h1>
+    </section>
+    <section id="memoirsSection">
+      <h1>Memoirs</h1>
+    </section>
+    <section id="contactSection">
+      <h1>Contact</h1>
+    </section>
   </main>
 </body>
 
