--- a/webapp/index.html
+++ b/webapp/index.html
@@ -51,7 +51,33 @@
       </div>
     </section>
     <section id="aboutSection">
-      <h1>About</h1>
+      <div id="skills">
+        <div class="row">
+          <div class="skill">
+            <img src="res/icons/agile.svg">
+            <span id="agile">Agile</span>
+            <p>Plan. Do. Check. Act. That’s how we can improve together.</p>
+          </div>
+          <div class="skill">
+            <img src="res/icons/quality.svg">
+            <span id="quality">Quality</span>
+            <p>Something is really done if I truly deliver quality.</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="skill">
+            <img src="res/icons/management.svg">
+            <span id="management">Management</span>
+            <p>Cost, time and scope are bolded words in my dictionary.</p>
+          </div>
+          <div class="skill">
+            <img src="res/icons/teamwork.svg">
+            <span id="teamwork">Teamwork</span>
+            <p>Help others the most. Learn from others the most.</p>
+          </div>
+        </div>
+      </div>
+
     </section>
     <section id="casesSection">
       <h1>Cases</h1>
