feat(about): add "What are you doing?"

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -51,31 +51,39 @@
       </div>
     </section>
     <section id="aboutSection">
-      <div id="skills">
+      <div id="skillsSubsection">
         <div class="row">
           <div class="skill">
             <img src="res/icons/agile.svg">
-            <span id="agile">Agile</span>
+            <span id="agile" class="title">Agile</span>
             <p>Plan. Do. Check. Act. That’s how we can improve together.</p>
           </div>
           <div class="skill">
             <img src="res/icons/quality.svg">
-            <span id="quality">Quality</span>
+            <span id="quality" class="title">Quality</span>
             <p>Something is really done if I truly deliver quality.</p>
           </div>
         </div>
         <div class="row">
           <div class="skill">
             <img src="res/icons/management.svg">
-            <span id="management">Management</span>
+            <span id="management" class="title">Management</span>
             <p>Cost, time and scope are bolded words in my dictionary.</p>
           </div>
           <div class="skill">
             <img src="res/icons/teamwork.svg">
-            <span id="teamwork">Teamwork</span>
+            <span id="teamwork" class="title">Teamwork</span>
             <p>Help others the most. Learn from others the most.</p>
           </div>
         </div>
+      </div>
+      <div id="whatAreYouDoingSubsection">
+        <span id="whatAreYouDoing" class="title">What are you doing?</span>
+        <p class="description">
+          Now I work for GreenYellow as a Software Architect and Back-End Lead.
+          Recently, I started with Golang and Kotlin. I’ve also met the awesome stock market.
+        </p>
+        <img src="res/images/profile1.png" alt="Profile picture" />
       </div>
     </section>
     <section id="casesSection">
