feat(about) add hobbies & interests

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -85,6 +85,24 @@
         </p>
         <img src="res/images/profile1.png" alt="Profile picture" />
       </div>
+      <div id="hobbiesSubsection" class="chips-section">
+        <span id="hobbies" class="chips-title">Hobbies</span>
+        <div class="chips">
+          <span>books</span>
+          <span>music</span>
+          <span>puzzles</span>
+          <span>writing</span>
+        </div>
+      </div>
+      <div id="interestsSection" class="chips-section">
+        <span id="interests" class="chips-title">Interests</span>
+        <div class="chips">
+          <span>self-improvement</span>
+          <span>entrepreneurship</span>
+          <span>investing</span>
+          <span>education</span>
+        </div>
+      </div>
     </section>
     <section id="casesSection">
       <h1>Cases</h1>
