refactor: extract .profile-picture class

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -39,7 +39,7 @@
   </nav>
   <main>
     <section id="firstImpressionSection">
-      <img id="profilePicture1" src="res/images/profile1.png" alt="Profile picture">
+      <img id="profilePicture1" class="profile-picture" src="res/images/profile1.png" alt="Profile picture">
       <div id="nameAndRole">
         <span id="name">TACIO COSTA</span>
         <span id="role">Software Engineer</span>
@@ -83,7 +83,7 @@
           Now I work for GreenYellow as a Software Architect and Back-End Lead.
           Recently, I started with Golang and Kotlin. I’ve also met the awesome stock market.
         </p>
-        <img src="res/images/profile1.png" alt="Profile picture" />
+        <img src="res/images/profile1.png" class="profile-picture" alt="Profile picture" />
       </div>
       <div id="hobbiesSubsection" class="chips-section">
         <span id="hobbies" class="chips-title">Hobbies</span>
