--- a/webapp/index.html
+++ b/webapp/index.html
@@ -83,7 +83,7 @@
           Now I work for GreenYellow as a Software Architect and Back-End Lead.
           Recently, I started with Golang and Kotlin. I’ve also met the awesome stock market.
         </p>
-        <img src="res/images/profile1.png" class="profile-picture" alt="Profile picture" />
+        <img src="res/images/profile2.jpg" class="profile-picture" alt="Profile picture" />
       </div>
       <div id="hobbiesSubsection" class="chips-section">
         <span id="hobbies" class="chips-title">Hobbies</span>
