feat(about): add pt_br strings

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -56,30 +56,30 @@
           <div class="skill">
             <img src="res/icons/agile.svg">
             <span id="agile" class="title">Agile</span>
-            <p>Plan. Do. Check. Act. That’s how we can improve together.</p>
+            <p id="agileDescription">Plan. Do. Check. Act. That’s how we can improve together.</p>
           </div>
           <div class="skill">
             <img src="res/icons/quality.svg">
             <span id="quality" class="title">Quality</span>
-            <p>Something is really done if I truly deliver quality.</p>
+            <p id="qualityDescription">Something is truly done if I truly deliver quality.</p>
           </div>
         </div>
         <div class="row">
           <div class="skill">
             <img src="res/icons/management.svg">
             <span id="management" class="title">Management</span>
-            <p>Cost, time and scope are bolded words in my dictionary.</p>
+            <p id="managementDescription">Cost, time and scope are bolded words in my dictionary.</p>
           </div>
           <div class="skill">
             <img src="res/icons/teamwork.svg">
             <span id="teamwork" class="title">Teamwork</span>
-            <p>Help others the most. Learn from others the most.</p>
+            <p id="teamworkDescription">Help others the most. Learn from others the most.</p>
           </div>
         </div>
       </div>
       <div id="whatAreYouDoingSubsection">
         <span id="whatAreYouDoing" class="title">What are you doing?</span>
-        <p class="description">
+        <p id="whatAreYouDoingDescription" class="description">
           Now I work for GreenYellow as a Software Architect and Back-End Lead.
           Recently, I started with Golang and Kotlin. I’ve also met the awesome stock market.
         </p>
@@ -88,19 +88,19 @@
       <div id="hobbiesSubsection" class="chips-section">
         <span id="hobbies" class="chips-title">Hobbies</span>
         <div class="chips">
-          <span>books</span>
-          <span>music</span>
-          <span>puzzles</span>
-          <span>writing</span>
+          <span id="booksHobby">books</span>
+          <span id="musicHobby">music</span>
+          <span id="puzzlesHobby">puzzles</span>
+          <span id="writingHobby">writing</span>
         </div>
       </div>
       <div id="interestsSection" class="chips-section">
         <span id="interests" class="chips-title">Interests</span>
         <div class="chips">
-          <span>self-improvement</span>
-          <span>entrepreneurship</span>
-          <span>investing</span>
-          <span>education</span>
+          <span id="selfImprovementInterest">self-improvement</span>
+          <span id="entrepreneurshipInterest">entrepreneurship</span>
+          <span id="investingInterest">investing</span>
+          <span id="educationInterest">education</span>
         </div>
       </div>
     </section>
