feat(cases): add cases list

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -105,7 +105,32 @@
       </div>
     </section>
     <section id="casesSection">
-      <h1>Cases</h1>
+      <div id="casesList">
+        <div class="case">
+          <img src="res/images/easyvision.png" alt="EasyVision">
+          <span>EasyVision</span>
+        </div>
+        <div class="case">
+          <img src="res/images/codycross.png" alt="EasyVision">
+          <span>Cody Cross</span>
+        </div>
+        <div class="case">
+          <img src="res/images/moodle.png" alt="EasyVision">
+          <span>Moodle</span>
+        </div>
+        <div class="case">
+          <img src="res/images/hydrocode.png" alt="EasyVision">
+          <span>Hydro Code</span>
+        </div>
+        <div class="case">
+          <img src="res/images/chessgame.jpg" alt="EasyVision">
+          <span>Chess Engine</span>
+        </div>
+        <div class="case">
+          <img src="res/images/easyvision.png" alt="EasyVision">
+          <span>Empire Estate</span>
+        </div>
+      </div>
     </section>
     <section id="memoirsSection">
       <h1>Memoirs</h1>
