feat(case_details): add html and css

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -106,31 +106,69 @@
     </section>
     <section id="casesSection">
       <div id="casesList">
-        <div class="case">
+        <div id="easyVisionCase" class="case">
           <img src="res/images/easyvision.png" alt="EasyVision">
           <span>EasyVision</span>
         </div>
-        <div class="case">
+        <div id="codyCrossCase" class="case">
           <img src="res/images/codycross.png" alt="EasyVision">
           <span>Cody Cross</span>
         </div>
-        <div class="case">
+        <div id="moodleCase" class="case">
           <img src="res/images/moodle.png" alt="EasyVision">
           <span>Moodle</span>
         </div>
-        <div class="case">
+        <div id="hydroCodeCase" class="case">
           <img src="res/images/hydrocode.png" alt="EasyVision">
           <span>Hydro Code</span>
         </div>
-        <div class="case">
+        <div id="chessEngineCase" class="case">
           <img src="res/images/chessgame.jpg" alt="EasyVision">
           <span>Chess Engine</span>
         </div>
-        <div class="case">
+        <div id="realEstateCase" class="case">
           <img src="res/images/easyvision.png" alt="EasyVision">
           <span>Empire Estate</span>
         </div>
       </div>
+    </section>
+    <section id="caseDetailsSection">
+      <img src="res/images/easyvision.png" alt="EasyVision">
+      <span id="caseTitle" class="title">case title</span>
+      <p id="caseDescription" class="description">
+        lorem impsum lorem impsum lo implorem impsum lorem impsum
+        lorem impsum lorem impsum lorem impsum lorem impsum lorem
+        impsum lorem impsum
+      </p>
+      <div id="techStackSubsection" class="chips-section">
+        <span id="techStack" class="chips-title">Tech Stack</span>
+        <div class="chips">
+          <span>Angular</span>
+          <span>NodeJS</span>
+          <span>Azure</span>
+          <span>Typescript</span>
+        </div>
+      </div>
+      <span id="contributionsTitle" class="title">Contributions</span>
+      <ul id="contributionsList">
+        <li class="description">
+          lorem impsum lorem impsum lo implorem impsum lorem impsum
+          lorem impsum lorem impsum lorem impsum lorem impsum lorem
+          impsum lorem impsum
+        </li>
+        <li class="description">
+          lorem impsum lorem impsum lo implorem impsum lorem impsum
+          lorem impsum lorem impsum lorem impsum lorem impsum lorem
+          impsum lorem impsum
+        </li>
+        <li class="description">
+          lorem impsum lorem impsum lo implorem impsum lorem impsum
+          lorem impsum lorem impsum lorem impsum lorem impsum lorem
+          impsum lorem impsum
+        </li>
+      </ul>
+
+
     </section>
     <section id="memoirsSection">
       <h1>Memoirs</h1>
