--- a/webapp/index.html
+++ b/webapp/index.html
@@ -106,27 +106,27 @@
     </section>
     <section id="casesSection">
       <div id="casesList">
-        <div id="easyVisionCase" class="case">
+        <div id="easyVisionCase" class="case" onclick="handleCase()">
           <img src="res/images/easyvision.png" alt="EasyVision">
           <span>EasyVision</span>
         </div>
-        <div id="codyCrossCase" class="case">
+        <div id="codyCrossCase" class="case" onclick="handleCase()">
           <img src="res/images/codycross.png" alt="EasyVision">
           <span>Cody Cross</span>
         </div>
-        <div id="moodleCase" class="case">
+        <div id="moodleCase" class="case" onclick="handleCase()">
           <img src="res/images/moodle.png" alt="EasyVision">
           <span>Moodle</span>
         </div>
-        <div id="hydroCodeCase" class="case">
+        <div id="hydroCodeCase" class="case" onclick="handleCase()">
           <img src="res/images/hydrocode.png" alt="EasyVision">
           <span>Hydro Code</span>
         </div>
-        <div id="chessEngineCase" class="case">
+        <div id="chessEngineCase" class="case" onclick="handleCase()">
           <img src="res/images/chessgame.jpg" alt="EasyVision">
           <span>Chess Engine</span>
         </div>
-        <div id="realEstateCase" class="case">
+        <div id="realEstateCase" class="case" onclick="handleCase()">
           <img src="res/images/easyvision.png" alt="EasyVision">
           <span>Empire Estate</span>
         </div>
@@ -167,8 +167,7 @@
           impsum lorem impsum
         </li>
       </ul>
-
-
+      <button id="back" onclick="handleClosingCase()">Back</button>
     </section>
     <section id="memoirsSection">
       <h1>Memoirs</h1>
@@ -180,9 +179,11 @@
 </body>
 
 <script type="module">
-  import { main, switchLanguage, closeMenu } from './js/main.js';
+  import { main, switchLanguage, closeMenu, handleCase, handleClosingCase } from './js/main.js';
   window.switchLanguage = switchLanguage;
   window.closeMenu = closeMenu;
+  window.handleCase = handleCase;
+  window.handleClosingCase = handleClosingCase;
   main();
 </script>
 
