--- a/webapp/index.html
+++ b/webapp/index.html
@@ -106,34 +106,34 @@
     </section>
     <section id="casesSection">
       <div id="casesList">
-        <div id="easyVisionCase" class="case" onclick="handleCase()">
-          <img src="res/images/easyvision.png" alt="EasyVision">
+        <div class="case" onclick="handleCase(event)">
+          <img id="easyVisionCase" src="res/images/easyvision.png" alt="EasyVision">
           <span>EasyVision</span>
         </div>
-        <div id="codyCrossCase" class="case" onclick="handleCase()">
-          <img src="res/images/codycross.png" alt="EasyVision">
+        <div class="case" onclick="handleCase(event)">
+          <img id="codyCrossCase" src="res/images/codycross.png" alt="EasyVision">
           <span>Cody Cross</span>
         </div>
-        <div id="moodleCase" class="case" onclick="handleCase()">
-          <img src="res/images/moodle.png" alt="EasyVision">
+        <div class="case" onclick="handleCase(event)">
+          <img id="moodleCase" src="res/images/moodle.png" alt="EasyVision">
           <span>Moodle</span>
         </div>
-        <div id="hydroCodeCase" class="case" onclick="handleCase()">
-          <img src="res/images/hydrocode.png" alt="EasyVision">
+        <div class="case" onclick="handleCase(event)">
+          <img id="hydroCodeCase" src="res/images/hydrocode.png" alt="EasyVision">
           <span>Hydro Code</span>
         </div>
-        <div id="chessEngineCase" class="case" onclick="handleCase()">
-          <img src="res/images/chessgame.jpg" alt="EasyVision">
+        <div class="case" onclick="handleCase(event)">
+          <img id="chessEngineCase" src="res/images/chessengine.jpg" alt="EasyVision">
           <span>Chess Engine</span>
         </div>
-        <div id="realEstateCase" class="case" onclick="handleCase()">
-          <img src="res/images/easyvision.png" alt="EasyVision">
+        <div class="case" onclick="handleCase(event)">
+          <img id="empireEstateCase" src="res/images/easyvision.png" alt="EasyVision">
           <span>Empire Estate</span>
         </div>
       </div>
     </section>
     <section id="caseDetailsSection">
-      <img src="res/images/easyvision.png" alt="EasyVision">
+      <img id="caseImage" src="res/images/easyvision.png" alt="EasyVision">
       <span id="caseTitle" class="title">case title</span>
       <p id="caseDescription" class="description">
         lorem impsum lorem impsum lo implorem impsum lorem impsum
@@ -142,25 +142,12 @@
       </p>
       <div id="techStackSubsection" class="chips-section">
         <span id="techStack" class="chips-title">Tech Stack</span>
-        <div class="chips">
-          <span>Angular</span>
-          <span>NodeJS</span>
-          <span>Azure</span>
-          <span>Typescript</span>
+        <div id="techStackChips" class="chips">
+          <span>tech</span>
         </div>
       </div>
       <span id="contributionsTitle" class="title">Contributions</span>
       <ul id="contributionsList">
-        <li class="description">
-          lorem impsum lorem impsum lo implorem impsum lorem impsum
-          lorem impsum lorem impsum lorem impsum lorem impsum lorem
-          impsum lorem impsum
-        </li>
-        <li class="description">
-          lorem impsum lorem impsum lo implorem impsum lorem impsum
-          lorem impsum lorem impsum lorem impsum lorem impsum lorem
-          impsum lorem impsum
-        </li>
         <li class="description">
           lorem impsum lorem impsum lo implorem impsum lorem impsum
           lorem impsum lorem impsum lorem impsum lorem impsum lorem
