feat(case_details): add language switch to dynamic content

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -105,6 +105,7 @@
       </div>
     </section>
     <section id="casesSection">
+      <input id="selectedCase" value="" type="hidden" />
       <div id="casesList">
         <div class="case" onclick="handleCase(event)">
           <img id="easyVisionCase" src="res/images/easyvision.png" alt="EasyVision">
@@ -154,7 +155,7 @@
           impsum lorem impsum
         </li>
       </ul>
-      <button id="back" onclick="handleClosingCase()">Back</button>
+      <button id="back" onclick="handleClosingCase()">BACK</button>
     </section>
     <section id="memoirsSection">
       <h1>Memoirs</h1>
