feat: add Empire Estate case content

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -128,7 +128,7 @@
           <span>Chess Engine</span>
         </div>
         <div class="case" onclick="handleCase(event)">
-          <img id="empireEstateCase" src="res/images/easyvision.png" alt="EasyVision">
+          <img id="empireEstateCase" src="res/images/empireestate.png" alt="Empire Estate">
           <span>Empire Estate</span>
         </div>
       </div>
