feat(memoirs): add HTML not stylized

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -158,7 +158,18 @@
       <button id="back" onclick="handleClosingCase()">BACK</button>
     </section>
     <section id="memoirsSection">
-      <h1>Memoirs</h1>
+      <div class="memoir">
+        <img src="res/images/clean_code.jpg">
+        <div class="text">
+          <span>Clean Code: 10 Core Ideas</span>
+          <span>Tuesday, 14th March 2019</span>
+          <p class="description">
+            lorem impsum lorem impsum lo implorem impsum lorem impsum
+            lorem impsum lorem impsum lorem impsum lorem impsum lorem
+            impsum lorem impsum
+          </p>
+        </div>
+      </div>
     </section>
     <section id="contactSection">
       <h1>Contact</h1>
