feat(memoirs): add styles

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -161,12 +161,39 @@
       <div class="memoir">
         <img src="res/images/clean_code.jpg">
         <div class="text">
-          <span>Clean Code: 10 Core Ideas</span>
-          <span>Tuesday, 14th March 2019</span>
-          <p class="description">
+          <span class="memoir-title">Clean Code: 10 Core Ideas</span>
+          <span class="memoir-date">Tuesday, 14th March 2019</span>
+          <p class="memoir-description">
             lorem impsum lorem impsum lo implorem impsum lorem impsum
             lorem impsum lorem impsum lorem impsum lorem impsum lorem
-            impsum lorem impsum
+            impsum lorem impsum.
+            <a href="#">Read More</a>
+          </p>
+        </div>
+      </div>
+      <div class="memoir">
+        <img src="res/images/clean_code.jpg">
+        <div class="text">
+          <span class="memoir-title">Clean Code: 10 Core Ideas</span>
+          <span class="memoir-date">Tuesday, 14th March 2019</span>
+          <p class="memoir-description">
+            lorem impsum lorem impsum lo implorem impsum lorem impsum
+            lorem impsum lorem impsum lorem impsum lorem impsum lorem
+            impsum lorem impsum.
+            <a href="#">Read More</a>
+          </p>
+        </div>
+      </div>
+      <div class="memoir">
+        <img src="res/images/clean_code.jpg">
+        <div class="text">
+          <span class="memoir-title">Clean Code: 10 Core Ideas</span>
+          <span class="memoir-date">Tuesday, 14th March 2019</span>
+          <p class="memoir-description">
+            lorem impsum lorem impsum lo implorem impsum lorem impsum
+            lorem impsum lorem impsum lorem impsum lorem impsum lorem
+            impsum lorem impsum.
+            <a href="#">Read More</a>
           </p>
         </div>
       </div>
