feat(contacts): add HTML and SASS

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -199,7 +199,24 @@
       </div>
     </section>
     <section id="contactSection">
-      <h1>Contact</h1>
+      <ul id="contacts">
+        <li>
+          <img src="res/icons/email.svg" alt="E-mail">
+          <span>taciomcosta@gmail.com</span>
+        </li>
+        <a href="https://linkedin.com/in/taciomcosta">
+          <li>
+            <img src="res/icons/linkedin.svg" alt="E-mail">
+            <span>linkedin.com/in/taciomcosta</span>
+          </li>
+        </a>
+        <a href="https://github.com/taciomcosta">
+          <li>
+            <img src="res/icons/github.svg" alt="E-mail">
+            <span>github.com/taciomcosta</span>
+          </li>
+        </a>
+      </ul>
     </section>
   </main>
 </body>
