feat: add table breakpoint to #hobbiesAndInterests

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -85,22 +85,24 @@
         </p>
         <img src="res/images/profile2.jpg" class="profile-picture" alt="Profile picture" />
       </div>
-      <div id="hobbiesSubsection" class="chips-section">
-        <span id="hobbies" class="chips-title">Hobbies</span>
-        <div class="chips">
-          <span id="booksHobby">books</span>
-          <span id="musicHobby">music</span>
-          <span id="puzzlesHobby">puzzles</span>
-          <span id="writingHobby">writing</span>
+      <div id="hobbiesAndInterests">
+        <div id="hobbiesSubsection" class="chips-section">
+          <span id="hobbies" class="chips-title">Hobbies</span>
+          <div class="chips">
+            <span id="booksHobby">books</span>
+            <span id="musicHobby">music</span>
+            <span id="puzzlesHobby">puzzles</span>
+            <span id="writingHobby">writing</span>
+          </div>
         </div>
-      </div>
-      <div id="interestsSection" class="chips-section">
-        <span id="interests" class="chips-title">Interests</span>
-        <div class="chips">
-          <span id="selfImprovementInterest">self-improvement</span>
-          <span id="entrepreneurshipInterest">entrepreneurship</span>
-          <span id="investingInterest">investing</span>
-          <span id="educationInterest">education</span>
+        <div id="interestsSection" class="chips-section">
+          <span id="interests" class="chips-title">Interests</span>
+          <div class="chips">
+            <span id="selfImprovementInterest">self-improvement</span>
+            <span id="entrepreneurshipInterest">entrepreneurship</span>
+            <span id="investingInterest">investing</span>
+            <span id="educationInterest">education</span>
+          </div>
         </div>
       </div>
     </section>
