feat: add tablet breakpoint to memoirs

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -168,8 +168,7 @@
           <p class="memoir-description">
             lorem impsum lorem impsum lo implorem impsum lorem impsum
             lorem impsum lorem impsum lorem impsum lorem impsum lorem
-            impsum lorem impsum.
-            <a href="#">Read More</a>
+            impsum lorem impsum...
           </p>
         </div>
       </div>
@@ -181,8 +180,7 @@
           <p class="memoir-description">
             lorem impsum lorem impsum lo implorem impsum lorem impsum
             lorem impsum lorem impsum lorem impsum lorem impsum lorem
-            impsum lorem impsum.
-            <a href="#">Read More</a>
+            impsum lorem impsum...
           </p>
         </div>
       </div>
@@ -194,8 +192,7 @@
           <p class="memoir-description">
             lorem impsum lorem impsum lo implorem impsum lorem impsum
             lorem impsum lorem impsum lorem impsum lorem impsum lorem
-            impsum lorem impsum.
-            <a href="#">Read More</a>
+            impsum lorem impsum...
           </p>
         </div>
       </div>
