feat: add row wrappers to first_impression

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -39,15 +39,19 @@
   </nav>
   <main>
     <section id="firstImpressionSection">
-      <img id="profilePicture1" class="profile-picture" src="res/images/profile1.png" alt="Profile picture">
-      <div id="nameAndRole">
-        <span id="name">TACIO COSTA</span>
-        <span id="role">Software Engineer</span>
+      <div class="first-impression-row">
+        <img id="profilePicture1" class="profile-picture" src="res/images/profile1.png" alt="Profile picture">
+        <div id="nameAndRole">
+          <span id="name">TACIO COSTA</span>
+          <span id="role">Software Engineer</span>
+        </div>
       </div>
-      <a id="meetMe" href="#aboutSection" onclick="closeMenu()">MEET ME</a>
-      <div id="quote">
-        <span id="quoteText">"Stay hungry. Stay foolish."</span>
-        <span id="quoteAuthor">Steve Jobs</span>
+      <div class="first-impression-row">
+        <a id="meetMe" href="#aboutSection" onclick="closeMenu()">MEET ME</a>
+        <div id="quote">
+          <span id="quoteText">"Stay hungry. Stay foolish."</span>
+          <span id="quoteAuthor">Steve Jobs</span>
+        </div>
       </div>
     </section>
     <section id="aboutSection">
