feat: add animate.css to first_impression

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
   <link rel="icon" href="res/icons/t.jpg">
   <title>Tacio Costa - Software Engineer</title>
 </head>
@@ -40,15 +41,16 @@
   <main>
     <section id="firstImpressionSection">
       <div class="first-impression-row">
-        <img id="profilePicture1" class="profile-picture" src="res/images/profile1.png" alt="Profile picture">
+        <img id="profilePicture1" class="profile-picture animated fadeIn" src="res/images/profile1.png"
+          alt="Profile picture">
         <div id="nameAndRole">
-          <span id="name">TACIO COSTA</span>
-          <span id="role">Software Engineer</span>
+          <span id="name" class="animated fadeInUp">TACIO COSTA</span>
+          <span id="role" class="animated fadeInDown">Software Engineer</span>
         </div>
       </div>
       <div class="first-impression-row">
-        <a id="meetMe" href="#aboutSection" onclick="closeMenu()">MEET ME</a>
-        <div id="quote">
+        <a id="meetMe" class="animated zoomIn" href="#aboutSection" onclick="closeMenu()">MEET ME</a>
+        <div id="quote" class="animated fadeIn">
           <span id="quoteText">"Stay hungry. Stay foolish."</span>
           <span id="quoteAuthor">Steve Jobs</span>
         </div>
