feat: add desktop breakpoint to #whatAreYouDoingSubsection

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -84,11 +84,13 @@
         </div>
       </div>
       <div id="whatAreYouDoingSubsection">
-        <span id="whatAreYouDoing" class="title">What are you doing?</span>
-        <p id="whatAreYouDoingDescription" class="description">
-          Now I work for GreenYellow as a Software Architect and Back-End Lead.
-          Recently, I started with Golang and Kotlin. I’ve also met the awesome stock market.
-        </p>
+        <div>
+          <span id="whatAreYouDoing" class="title">What are you doing?</span>
+          <p id="whatAreYouDoingDescription" class="description">
+            Now I work for GreenYellow as a Software Architect and Back-End Lead.
+            Recently, I started with Golang and Kotlin. I’ve also met the awesome stock market.
+          </p>
+        </div>
         <img src="res/images/profile2.jpg" class="profile-picture" alt="Profile picture" />
       </div>
       <div id="hobbiesAndInterests">
