feat: add desktop breakpoint to case_details

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -144,13 +144,17 @@
       </div>
     </section>
     <section id="caseDetailsSection">
-      <img id="caseImage" src="res/images/easyvision.png" alt="EasyVision">
-      <span id="caseTitle" class="title">case title</span>
-      <p id="caseDescription" class="description">
-        lorem impsum lorem impsum lo implorem impsum lorem impsum
-        lorem impsum lorem impsum lorem impsum lorem impsum lorem
-        impsum lorem impsum
-      </p>
+      <div id="projectInfo">
+        <img id="caseImage" src="res/images/easyvision.png" alt="EasyVision">
+        <div>
+          <span id="caseTitle" class="title">case title</span>
+          <p id="caseDescription" class="description">
+            lorem impsum lorem impsum lo implorem impsum lorem impsum
+            lorem impsum lorem impsum lorem impsum lorem impsum lorem
+            impsum lorem impsum
+          </p>
+        </div>
+      </div>
       <div id="techStackSubsection" class="chips-section">
         <span id="techStack" class="chips-title">Tech Stack</span>
         <div id="techStackChips" class="chips">
