feat(contacts): add mailto and new tab to links

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -211,19 +211,19 @@
     </section>
     <section id="contactSection">
       <ul id="contacts">
-        <a>
+        <a href="mailto:taciomcosta@gmail.com">
           <li>
             <img src="res/icons/email.svg" alt="E-mail">
             <span>taciomcosta@gmail.com</span>
           </li>
         </a>
-        <a href="https://linkedin.com/in/taciomcosta">
+        <a href="https://linkedin.com/in/taciomcosta" target="_blank">
           <li>
             <img src="res/icons/linkedin.svg" alt="E-mail">
             <span>linkedin.com/in/taciomcosta</span>
           </li>
         </a>
-        <a href="https://github.com/taciomcosta">
+        <a href="https://github.com/taciomcosta" target="_blank">
           <li>
             <img src="res/icons/github.svg" alt="E-mail">
             <span>github.com/taciomcosta</span>
